# swapi_grpc

./: .gitignore  Cargo.toml  README.md  build.rs  go.mod  go.sum  main.go  makefile
infra/database/: database.go
infra/database/mongo/: films.go  mongo.go  people.go  planets.go  species.go
infra/delivery/grpc/: films.go  people.go  planets.go  server.go  species.go
protos/: .gitignore
src/: films.rs  server.rs
structs/: films.go  people.go  planets.go  species.go  starships.go  transport.go  vehicles.go
