[package]
name = "grpc_swapi"
version = "0.1.0"
authors = ["areThereAnyUserNamesLeft <r1ch4rdp4p3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
tonic = {version="0.3",features = ["tls"]}
tokio = {version="0.2",features = ["stream", "macros"]}

[build-dependencies]
tonic-build = "0.3"

[[bin]] # Bin to run the gRPC server
name = "grpc-swapi-server"
path = "src/server.rs"
